# pico-spi-pseudoram

./: CMakeLists.txt  README.md  pico_spi_pseudoram.c
